# web3-mining

./: .env.example  .gitignore  Cargo.toml  abi.md  config.toml  pixi.toml
dump/: Cargo.toml
dump/src/: config.rs  fetch.rs  main.rs  migration.rs  rpc.rs
dump/src/metrics/: block.rs  event.rs  mod.rs  pendle.rs  uniswap.rs  uniswap_v2.rs  uniswap_v3.rs
dump/src/rpc/: contract.rs  eth.rs  mod.rs
dump/src/rpc/abi/: pendle_mkt.json  pendle_yield.json
dump/src/tasks/: mod.rs  pendle.rs  uniswap.rs
fetch/: Cargo.toml
fetch/src/: conn.rs  init_tx_event.sql  init_tx_message.sql  main.rs  model.rs  rpc.rs
spark/: test.py
tauri-app/: .prettierrc.json  package.json  tailwind.config.js  vite.config.ts
tauri-app/src/: App.vue  styles.css
tauri-app/src-tauri/: Cargo.toml
tauri-app/src-tauri/exprs/: bm.jsonl  upair.jsonl
tauri-app/src-tauri/src/: main.rs
tauri-app/src/components/: Greet.vue
tauri-app/src/lib/: data.ts
test/: common.py  fee.jl  gen_config.py  gen_exprs.py  lvr.jl  pendle_amm.py  requirements.txt  test_anchor.py  test_df.py  tokens.csv  upload_s3.py
