[package]
name = "dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
dotenvy = "0.15.7"
ethers-core = "2.0.14"
ethers-providers = "2.0.14"
futures = "0.3.30"
lazy_static = "1.4.0"
polars = { version = "0.38.3", features = ["parquet", "lazy"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
