[package]
name = "fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clickhouse = "0.11.4"
primitive-types = "0.12.1"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.4"
