[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.81"
chrono = { version = "0.4.35", features = ["serde"] }
polars = { version = "0.41.3", features = ["parquet", "lazy", "cum_agg", "sql", "serde"] }
polars-plan = {version = "*", features = ["serde"] }
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
